syntax = "proto3";

option java_multiple_files = true;
option java_package = "customer";

service CustomerService{
  rpc GetCustomerDetails(CustomerRequest) returns (CustomerResponse);
}

message CustomerRequest {
  string customerId = 1;
}

message CustomerResponse {
  string name = 1;
  string email = 2;
  string address = 3;
}